# autoupdate_languages2

./: .aidigestignore  .gitignore  Icons_rc.py  README.md  changelog.md  ideas.txt  main.py  notes.txt  plan.txt  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  app.py  config.py  core.py  file_manager.py  schedular.py  scraper.py
app/database/: db.py
app/screens/translated/: landing.py
app/screens/ui/: landing.ui
app/services/: scraper.py
autoupdate_languages2/project_output/: lang_list.txt
tests/: test_config.py  test_core.py
