[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "programming-languages-dictionary"
version = "2.0.2"
authors = [
  { name="mek0124", email="mek0124@proton.me" }
]
maintainers = [
  { name="mek0124", email="mek0124@proton.me" }
]
description = "A light-weight PySide6 application that maintains an active dictionary on the currently known programming languages, esoterik included"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "beautifulsoup4>=4.13.3",
  "requests>=2.32.3"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23.0",
  "wheel>=0.45.1"
]

[project.scripts]
programming-language-dictionary = "main:start"